# server-language-benchmark

./: .gitignore  .gitmodules  Analyze Bench.ipynb  CONTRIBUTERS.txt  IMPLEMENTATION.md  LICENSE  README.md  SPEC.md  go.work  make_plots.py  run_benchmarks.py
C/: CMakeLists.txt  README.md  c_hash_map.c  c_hash_map.h  main.c  parser.c  parser.h  server.c  server.h  store.c  store.h
C-new/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  command.c  command.h  command_test.c  main.c  server.c  server.h  store.c  store.h  store_test.c
Crystal/: Dockerfile  README.md  shard.yml
Crystal/src/: blobstorage.cr  dump.cr  hashmap.cr  main.cr  record.cr  server.cr  sha512_256.cr
Dart/: .gitignore  .packages  Dockerfile  README.md  pubspec.yaml
Dart/.dart_tool/: package_config.json
Deno/: Dockerfile  mod.ts
Deno/src/: constants.ts  handlers.ts  helpers.ts  middleware.ts  server.ts  types.ts
Elixir/: .gitignore  Dockerfile  README.md  mix.exs
Elixir/lib/: command.ex  dumper.ex  json.ex  record.ex  server.ex  server_bench.ex  store.ex
Elixir/test/: server_bench_test.exs
Java/: .gitignore  Dockerfile  pom.xml
Kotlin/: build.gradle.kts  settings.gradle.kts
Python/: Dockerfile  Dockerfile-pypy  command.py  main.py  record.py  store.py
Ruby/: Dockerfile  Dockerfile-yjit  command.rb  command.rbs  handler.rb  main.rb  record.rb  record.rbs  store.rb  store.rbs
Rust/: Cargo.toml  Dockerfile
Rust/src/: command.rs  main.rs  record.rs  server.rs  store.rs
Swift/: .dockerignore  Dockerfile  Dockerfile-ARM  Package.resolved  Package.swift  README.md
Swift/Sources/BenchmarkServer/: BenchmarkServer.swift  CChar+ExpressibleByUnicodeScalarLiteral.swift  CString.swift  CStringSlice.swift  Character+Helpers.swift  Command.swift  Digest+hexString.swift  Server.swift  (+6 more)
SwiftNIO/: Dockerfile  Dockerfile-ARM  Package.resolved  Package.swift  README.md
advanced-client/: .gitignore  bench_runner.go  cmd.go  default-plan.yaml  generate.go  go.mod  go.sum  limits.go  main.go  operation.go  patterns.go  patterns_test.go  plan.go  reporter.go  runner.go  sequential.go  smartio.go  test_reporter.go
client/: .gitignore  Cargo.toml  elixir-bench.txt  go-bench.txt  java-bench.txt  ruby-bench.txt  ruby-yjit-bench.txt
client/src/: benchmark.rs  commands.rs  main.rs
go/: Dockerfile  bigstore.go  go.mod  main.go  parser.go  server.go  store.go
(+39 files in other folders)
