[package]
name = "server-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["net", "io-util", "macros", "rt-multi-thread", "time", "sync"]}
chashmap = "2.2.2"
regex = "1.5.5"
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_millis = "0.1.1"