[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util", "time", "fs", "tracing"]}
dialoguer = "0.10.0"
chrono = "0.4.19"
rand = "0.8"
console-subscriber = "0.1.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"